footer fixed on mobile

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -17,8 +17,9 @@
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
-    height: 100vh;
+    // height: 100vh;
     width: 100vw;
+    min-height: 100vh;
     @media (max-width: $desktop-breakpoint) {
         display: flex;
         flex-direction: column;
@@ -30,6 +31,7 @@
 .about__bio {
     width: 45vw;
     font-family: 'Montserrat', sans-serif;
+    margin-bottom: 10rem;
     h1 {
         margin-top: 0;
         margin-bottom: 0;
