--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -10,13 +10,13 @@
 }
 
 .header__content__logo {
-    font-family: 'El Messiri', sans-serif;
+    font-family: $main-font;
     font-size: 3.0rem;
     color: white;
     justify-content: center;
     text-decoration: none;
     border: 2px solid white;
-    padding: 5px 10px 0 10px;
+    padding: 5px 10px 5px 10px;
 }
 
 .header--link {
