--- a/src/styles/components/_mobile-header.scss
+++ b/src/styles/components/_mobile-header.scss
@@ -9,7 +9,7 @@
     z-index: 1; 
     top: 0; 
     left: 0;
-    background-color: $off-black; 
+    background-color: black; 
     overflow-x: hidden; 
     padding-top: 60px; 
     transition: 0.6s; 
@@ -18,6 +18,7 @@
   .sidenav__link {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
+    font-family: $main-font;
     font-size: 25px;
     color: $off-grey;
     display: block;
@@ -37,10 +38,13 @@
   }
 
   .sideNav .mobile__header__recources {
-      position: absolute;
-      bottom: 75px;
-      left: 75px;
-      z-index: 1;
+    background: $off-black;
+    display: flex;
+    justify-content: center;
+    padding: 15px 0 15px 0;
+    border-top: 1px solid $off-grey;
+    border-bottom: 1px solid $off-grey;
+    margin-bottom: $l-size;
 }
 
   .mobile-header-container {
